--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,147 +1,427 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap');
+@import url('reset.css');
 
-body{
+@mixin absolPos {
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+$whiteOpac: rgba(255, 255, 255, 0.2);
+
+
+body {
     width: 100%;
     background-color: black;
     font-family: 'Titillium Web', sans-serif;
+
     // font-family: 'Noto Sans KR', sans-serif;
-    h1{
+    h1 {
         color: white;
-        font-size: 100px;
+        font-size: 6.25rem;
         font-weight: 100;
     }
-    h2{}
-    h3{}
-    h4{}
-    p{
+
+    h2 {
         color: white;
-        font-size: 16px;
+        font-size: 3.75rem;
+        font-weight: 100;
+        text-decoration: line-through;
+        text-decoration-thickness: 1px;
+        text-align: center;
+        margin: 150px 0 100px 0;
     }
-    #root{
-        header{
+
+    h3 {}
+
+    h4 {
+        color: white;
+        font-size: 1.5rem;
+        font-weight: 400;
+        text-align: center;
+        margin: 100px 0 30px 0;
+    }
+
+    p {
+        color: white;
+        font-size: 1rem;
+        text-align: center;
+        font-weight: 300;
+        opacity: 0.7;
+    }
+
+    .section {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    #root {
+        header {
             width: 100%;
             position: fixed;
             z-index: 100;
-            nav{
+
+            nav {
                 width: 10%;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 margin-left: 70%;
-                >div{
-                    .logo{
+
+                >div {
+                    .logo {
                         position: absolute;
                         top: 30px;
                         left: 50px;
                         width: 5%;
-                        >img{
-                        }
+
+                        >img {}
                     }
                 }
-                >a{
+
+                >a {
                     margin: 20px;
                     padding: 10px 20px;
                     width: 100%;
                     color: white;
-                    font-weight: 900;
+                    font-weight: 500;
                 }
-                >a:link{
+
+                >a:link {
                     text-decoration: none;
                 }
-                >a:hover{
+
+                >a:hover {
                     background-color: white;
                     color: black;
+                    border-radius: 5px;
                 }
             }
         }
-        main{
-            aside{
+
+        main {
+            aside {
+
                 // display: none;
-                >a{}
+                >a {}
             }
-            .main{
+
+            .main {
                 position: relative;
-                >img{
-                    width: 100%;  
+
+                >img {
+                    width: 100%;
                 }
-                .ii{
+
+                .margin {
                     width: 80%;
-                    .main-title{
+
+                    .main-title {
                         position: absolute;
-                        top: 10%;
-                        left: 800px;
-                        >h1{}
-                        >p{
-                            >b{}
+                        top: 25%;
+                        @include absolPos;
+                        display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        align-items: center;
+
+                        >h1 {}
+
+                        >p {
+                            width: 15%;
+                            text-align: center;
+                            background-color: white;
+                            border-radius: 50px;
+                            padding: 15px 30px;
+                            color: black;
+                            font-size: 1.25rem;
+                            opacity: 0.9;
+                            margin: 30px;
+
+                            >b {}
                         }
                     }
                 }
             }
-            .about{
-                >h2{}
-                .about-box{
-                    .quote-box{
-                        >h4{}
-                        >p{}
+
+            .about {
+
+                >h2 {}
+
+                .about-box {
+                    width: 100%;
+                    border: 1px solid $whiteOpac;
+                    border-radius: 30px;
+
+                    .quote-box {
+                        >h4 {}
+
+                        >p {}
                     }
-                    .edu-box{
-                        >h4{}
-                        .table-box{
-                            table{
-                                tr{
-                                    th{}
-                                    td:nth-child(1){}
-                                    td:nth-child(2){}
+
+                    .edu-box {
+                        color: white;
+
+                        >h4 {}
+
+                        .table-box {
+                            table {
+                                width: 80%;
+                                margin: 0 auto 100px;
+                                border-collapse: collapse;
+                                tbody{
+                                    tr,
+                                    th,
+                                    td {
+                                        border: 1px solid $whiteOpac;
+    
+                                        th {
+                                            border-left: hidden;
+                                        }
+    
+                                        td:nth-of-type(1) {
+                                            padding: 20px 80px;
+                                            opacity: 0.7;
+                                        }
+    
+                                        td:nth-of-type(2) {
+                                            text-align: center;
+                                            border-right: hidden;
+                                            opacity: 0.7;
+                                        }
+                                    }
+                                }
+
+                            }
+                        }
+                    }
+                }
+            }
+
+            .skills {
+                .skill-head {
+                    >h2 {}
+
+                    >p {}
+                }
+
+                .skill-box {
+                    border: 1px solid $whiteOpac;
+                    border-radius: 30px;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    flex-wrap: wrap;
+                    padding: 100px 150px;
+                    margin: 30px auto 250px;
+
+                    .each-skill {
+                        width: 20%;
+                        margin: 20px;
+
+                        .logo-box {
+                            width: 30%;
+                            padding: 15px 15px 10px 15px;
+                            background-color: #1B1B1B;
+                            border-radius: 7px;
+                            margin-bottom: 15px;
+
+                            >img {
+                                width: 100%;
+                            }
+                        }
+
+                        >div {
+                            width: 100%;
+
+                            >span {
+                                font-size: 1.25rem;
+                                font-weight: 700;
+                                color: white;
+                            }
+
+                            >p {
+                                text-align: left;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .contact {
+                position: relative;
+
+                >img {
+                    width: 100%;
+                    // outline: none;
+                }
+
+                .contact-content {
+                    position: absolute;
+                    top: 0;
+                    @include absolPos;
+
+                    .contact-head {
+                        >h2 {}
+
+                        >p {}
+                    }
+
+                    .contact-box {
+                        border: 1px solid $whiteOpac;
+                        border-radius: 30px;
+                        margin: 100px auto;
+
+                        .contact-flex {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+
+                            >figure {
+                                width: 25%;
+                                margin: 80px;
+                                border-right: 1px solid $whiteOpac;
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: center;
+                                align-items: center;
+
+                                >img {
+                                    width: 50%;
+                                    border-radius: 100%;
+                                    margin-bottom: 80px;
+                                }
+
+                                >figcaption {
+                                    >p {}
                                 }
                             }
                         }
                     }
                 }
             }
-            .skills{
-                .skill-head{
-                    >h2{}
-                    >p{}
+
+            .project {
+                width: 100%;
+
+                >img {
+                    position: relative;
+                    width: 100%;
+                    opacity: 0.3;
                 }
-                .skill-box{
-                    .each-skill{
-                        >div{
-                            >img{}
+
+                .project-main {
+                    width: 80%;
+                    position: absolute;
+                    top: 0;
+                    @include absolPos;
+
+                    >h2 {}
+
+                    .mySwiper {
+                        width: 60%;
+
+                        .each-slide {
+                            >img {
+                                width: 100%;
+                                border-radius: 20px;
+                                margin-bottom: 20px;
+                            }
+
+                            >p {
+                                position: absolute;
+                                top: 10%;
+                                @include absolPos;
+                                opacity: 1;
+                                font-size: 2rem;
+                            }
+
+                            .project-button {
+                                position: absolute;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                top: 70%;
+                                @include absolPos;
+                                font-size: 1.5rem;
+
+                                >a {
+                                    background-color: $whiteOpac;
+                                    border-radius: 5px;
+                                    padding: 5px 20px;
+                                }
+
+                                >a:hover {
+                                    background-color: white;
+                                    color: black;
+                                }
+
+                                .to-info-button {
+                                    color: white;
+                                    margin-right: 60px;
+                                }
+
+                                .to-site-button {
+                                    color: white;
+                                }
+                            }
                         }
-                        >div{
-                            >span{}
-                            >p{}
+
+                        .swiper-pagination-bullets {
+                            margin: 20px;
                         }
                     }
                 }
             }
-            .contact{
-                >img{}
-                .contact-head{
-                    >h2{}
-                    >p{}
-                }
-                .contact-box{
-                    >figure{
-                        >img{}
-                        >figcaption{
-                            >p{}
-                        }
+
+            .project-info {
+                width: 100%;
+                .banner {
+                    >img {
+                        //get from json and use as backgroundimg**same for the other background imgs
                     }
                 }
-            }
-            .project{
-                >img{}
-                >h2{}
-                .mySwiper{
-                    .each-slide{
-                        >img{}
-                        >p{}
-                        .to-info-button{}
-                        .to-site-button{}
+                .project-content{
+                    width: 80%;
+                    margin: 0 auto;
+                    .project-title {
+                        >h2 {}
+    
+                        >p {}
+                    }
+    
+                    .project-descript-1 {
+                        >h4 {}
+    
+                        >p {}
+                    }
+    
+                    .image-cluster-1 {
+                        >img:nth-of-type(1) {}
+    
+                        >img:nth-of-type(2) {}
+    
+                        >img:nth-of-type(3) {}
+                    }
+    
+                    .project-descript-2 {}
+    
+                    .image-cluster-2 {}
+    
+                    .project-descript-3 {}
+    
+                    .image-cluster-3 {}
+    
+                    >a {
+                        background-color: $whiteOpac;
+                        border-radius: 5px;
+                        padding: 5px 20px;
+                        color: white;
                     }
                 }
+
             }
         }
 
