--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -56,14 +56,15 @@ body {
         text-decoration: line-through;
         text-decoration-thickness: 1px;
         text-align: center;
-        margin: 150px 0 100px 0;
+        margin: 150px 0 70px 0;
     }
 
     h3 {}
 
     h4 {
         color: white;
-        font-size: 1.5rem;
+        font-size: 1.25rem;
+        font-style: italic;
         font-weight: 400;
         text-align: center;
         margin: 100px 0 30px 0;
@@ -172,7 +173,12 @@ body {
                             .adj-ani {
                                 transition: smooth;
                             }
-                            >p{}
+                            >p{
+                                color: black;
+                                opacity: 1;
+                                font-weight: 500;
+                                font-size: 1.25rem;
+                            }
                         }
                     }
                 }
@@ -358,7 +364,7 @@ body {
                     @include absolPos;
 
                     >h2 {}
-
+                    
                     .mySwiper {
                         width: 60%;
 
